<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.molo.Profile$PlaceholderFragment" >

    <ImageView
        android:id="@+id/iv_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/profilepic" android:contentDescription="TODO"/>

    <TextView
        android:id="@+id/Tv_P_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Tv_P_highest"
        android:layout_below="@+id/iv_voice"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/Tv_P_highest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Tv_P_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/highest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/Tv_P_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Tv_P_highest"
        android:layout_centerVertical="true"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_P_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Tv_P_highest"
        android:layout_below="@+id/Tv_P_highest"
        android:layout_marginTop="48dp"
        android:text="@string/edit_profile" />

</RelativeLayout>
